# vocablens

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  worker.py
alembic/: env.py
tests/: conftest.py  postgres_harness.py  product_flow_scenarios.py  test_adaptive_paywall_service.py  test_addiction_engine.py  test_admin_diagnostics_flows_postgres.py  test_analytics_service.py  test_api_integration.py  test_auth.py  test_business_metrics_service.py  test_chaos_hardening.py  test_consumer_idempotency_contract.py  test_content_engine.py  test_content_quality_gate_service.py  test_content_quality_health_signal_service.py  test_conversation_service_learning_wiring.py  test_conversion_funnel_service.py  test_daily_loop_health_signal_service.py  test_daily_loop_postgres_concurrency.py  test_daily_loop_service.py  test_decision_trace_service_reports.py  test_dependencies_compat.py  test_entitlement_policy_service.py  test_events.py  test_exercise_template_health_signal_service.py  test_exercise_template_registry_admin_service.py  test_exercise_template_registry_service.py  test_experiment_attribution_service.py  test_experiment_postgres_concurrency.py  test_experiment_registry_service.py  test_experiment_results_service.py  test_experiment_service.py  test_experiments.py  test_explanation_service.py  test_frontend_api.py  test_frontend_service.py  test_gamification_service.py  test_global_decision_engine.py  test_habit_engine.py  test_hot_user_worker_gap_recovery.py  (+44 more)
vocablens/: config.py  main.py  worker.py
(+262 files in other folders)
